# spectAIchallenge

./: .gitignore  README.md  WRITEUP.md
backend/: README.md  backup.py  main.py  parsing.py  parsing_before_chunk_logic.py  parsing_with_chunking.py  pyproject.toml  requirements.txt  robust_parsing.py
documents/: 23 82 43 Electric Heaters.json
frontend/: LOADING_EXPERIENCE.md  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: app-build-manifest.json  prerender-manifest.json  trace
frontend/.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
frontend/.next/cache/eslint/: .cache_56o4ad
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/chunks/: [root-of-the-server]__80bb4c51._.js.map  node_modules_next_11760126._.js.map
frontend/.next/static/chunks/: [next]_internal_font_google_jetbrains_mono_409f0de4_module_css_e59ae46c._.single.css  [next]_internal_font_google_jetbrains_mono_409f0de4_module_css_e59ae46c._.single.css.map  [root-of-the-server]__21838d81._.css  [root-of-the-server]__21838d81._.css.map  [root-of-the-server]__9a168d68._.css  (+54 more)
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: EnhancedLoadingExperience.tsx  ErrorAlert.tsx  FileDropzone.tsx  JsonViewer.tsx  LoadingSpinner.tsx
json_outputs/: 22_08_00_commissioning_plumbing_short.json  233000_hvac_air_distribution_long.json  23_82_43_electric_heaters.json  271500_medium.json  README.md
(+49 files in other folders)
